added function to display numbers on the screen

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             <button class = "sign">+/-</button>
             <button class = "percentage">%</button>
             <button class = "op">/</button>
-            <button class = "numbers">7</button>
-            <button class = "numbers">8</button>
-            <button class = "numbers">9</button>
+            <button class = "numbers" value = "7" >7</button>
+            <button class = "numbers" value = "8">8</button>
+            <button class = "numbers" value = "9">9</button>
             <button class = "op">*</button>
-            <button class = "numbers">4</button>
-            <button class = "numbers">5</button>
-            <button class = "numbers">6</button>
+            <button class = "numbers" value = "4">4</button>
+            <button class = "numbers" value = "5">5</button>
+            <button class = "numbers" value = "6">6</button>
             <button class = "op">-</button>
-            <button class = "numbers">1</button>
-            <button class = "numbers">2</button>
-            <button class = "numbers">3</button>
+            <button class = "numbers" value = "1">1</button>
+            <button class = "numbers" value = "2">2</button>
+            <button class = "numbers" value = "3">3</button>
             <button class = "op">+</button>
             <button class = "numbers number-0">0</button>
             <button class = "decimal">.</button>
