--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
     <div class = "container">
         <div class="display">0</div>
         <div class="all-buttons">
-            <button class="clear">AC</button>
-            <button class = "sign">+/-</button>
-            <button class = "percentage">%</button>
+            <button class="clear" value = "clear">AC</button>
+            <button class = "sign" value = "sign">+/-</button>
+            <button class = "percentage" value = "%">%</button>
             <button class = "op">/</button>
             <button class = "numbers" value = "7" >7</button>
             <button class = "numbers" value = "8">8</button>
             <button class = "numbers" value = "9">9</button>
-            <button class = "op">*</button>
+            <button class = "op" value = "*">*</button>
             <button class = "numbers" value = "4">4</button>
             <button class = "numbers" value = "5">5</button>
             <button class = "numbers" value = "6">6</button>
-            <button class = "op">-</button>
+            <button class = "op" value = "-">-</button>
             <button class = "numbers" value = "1">1</button>
             <button class = "numbers" value = "2">2</button>
             <button class = "numbers" value = "3">3</button>
-            <button class = "op">+</button>
-            <button class = "numbers number-0">0</button>
+            <button class = "op" value = "+">+</button>
+            <button class = "numbers number-0" value = "0">0</button>
             <button class = "decimal">.</button>
-            <button class = "op">=</button>
+            <button class = "op" value = "=">=</button>
         </div>
     </div>
     </section>  
