function to do the basic operations

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class = "op" value = "+">+</button>
             <button class = "numbers number-0" value = "0">0</button>
             <button class = "decimal">.</button>
-            <button class = "op equals" value = "=">=</button>
+            <button class = "equals" value = "=">=</button>
         </div>
     </div>
     </section>  
