--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="clear" value = "clear">AC</button>
             <button class = "sign" value = "sign">+/-</button>
             <button class = "percentage" value = "%">%</button>
-            <button class = "op">/</button>
+            <button class = "op" value = "/">/</button>
             <button class = "numbers" value = "7" >7</button>
             <button class = "numbers" value = "8">8</button>
             <button class = "numbers" value = "9">9</button>
