--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class = "numbers" value = "3">3</button>
             <button class = "op" value = "+">+</button>
             <button class = "numbers number-0" value = "0">0</button>
-            <button class = "decimal">.</button>
+            <button class = "decimal" value = ".">.</button>
             <button class = "equals" value = "=">=</button>
         </div>
     </div>
